--- a/MoviesAPI/Base.lproj/LaunchScreen.storyboard
+++ b/MoviesAPI/Base.lproj/LaunchScreen.storyboard
@@ -15,28 +15,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOVIES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHa-6G-i2o">
-                                <rect key="frame" x="87" y="486" width="240" height="61"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Q2u-Nu-sm0">
+                                <rect key="frame" x="107" y="348" width="200" height="200"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="TZi-CF-5q5">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="106.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="TZi-CF-5q5" secondAttribute="height" multiplier="15:8" id="XFs-OW-CsX"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOVIES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHa-6G-i2o">
+                                        <rect key="frame" x="0.0" y="114.5" width="200" height="85.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
+                                        <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="61" id="163-kT-UA4"/>
+                                    <constraint firstAttribute="width" constant="200" id="IjW-9T-2Id"/>
+                                    <constraint firstAttribute="height" constant="200" id="jxx-07-bw6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
-                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="TZi-CF-5q5">
-                                <rect key="frame" x="87" y="350" width="240" height="128"/>
-                            </imageView>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="TZi-CF-5q5" firstAttribute="leading" secondItem="oHa-6G-i2o" secondAttribute="leading" id="RbI-dA-kez"/>
-                            <constraint firstItem="TZi-CF-5q5" firstAttribute="trailing" secondItem="oHa-6G-i2o" secondAttribute="trailing" id="Xpd-oM-n3Q"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oHa-6G-i2o" secondAttribute="bottom" constant="315" id="aCJ-88-7Bx"/>
-                            <constraint firstItem="TZi-CF-5q5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="ai7-4z-MV6"/>
-                            <constraint firstItem="oHa-6G-i2o" firstAttribute="top" secondItem="TZi-CF-5q5" secondAttribute="bottom" constant="8" id="anc-YJ-Iqb"/>
-                            <constraint firstItem="TZi-CF-5q5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="306" id="dMw-Hf-VuR"/>
-                            <constraint firstItem="TZi-CF-5q5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="yIs-Ah-YmA"/>
+                            <constraint firstItem="Q2u-Nu-sm0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="aeg-nA-oBI"/>
+                            <constraint firstItem="Q2u-Nu-sm0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zLn-Hj-eCi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
