--- a/MoviesAPI/PopularMovies/Movies.storyboard
+++ b/MoviesAPI/PopularMovies/Movies.storyboard
@@ -55,32 +55,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X96-mB-rmF">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X96-mB-rmF">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="234"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="234" id="S3U-Sg-wPs"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1DD-OS-RdG">
-                                <rect key="frame" x="20" y="259" width="374" height="40"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ln-sz-CvS">
                                 <rect key="frame" x="20" y="330" width="374" height="40"/>
                                 <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="NTS-KR-We5"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                 <color key="textColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gN-UB-pVT">
-                                <rect key="frame" x="20" y="392" width="374" height="72"/>
+                                <rect key="frame" x="20" y="408" width="374" height="26"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="ajV-M4-WVi"/>
+                                    <constraint firstAttribute="height" constant="26" id="ajV-M4-WVi"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                 <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -93,7 +87,7 @@
                                     <constraint firstAttribute="height" constant="39" id="Vr8-CY-ra5"/>
                                 </constraints>
                                 <state key="normal" title="See in IMDB for more">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="imdbClicked:" destination="0bQ-OI-RPP" eventType="touchUpInside" id="nKe-cO-swZ"/>
@@ -117,16 +111,34 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jzf-7c-cg5">
-                                <rect key="frame" x="20" y="458" width="374" height="20.5"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="Overview">
-                                        <attributes>
-                                            <font key="NSFont" metaFont="system" size="17"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="1" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jzf-7c-cg5">
+                                <rect key="frame" x="20" y="458" width="374" height="14.5"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vnz-Jx-kqd">
+                                <rect key="frame" x="364" y="0.0" width="50" height="50"/>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="backClicked:" destination="0bQ-OI-RPP" eventType="touchUpInside" id="ngv-TD-0FR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFC-wL-Lm1">
+                                <rect key="frame" x="326" y="256" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="B5l-pK-olg"/>
+                                    <constraint firstAttribute="width" constant="64" id="kqi-PH-Ezs"/>
+                                    <constraint firstAttribute="width" secondItem="BFC-wL-Lm1" secondAttribute="height" multiplier="1:1" id="sHO-mk-k3s"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="favClicked:" destination="0bQ-OI-RPP" eventType="touchUpInside" id="mgE-cd-YpS"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1DD-OS-RdG">
+                                <rect key="frame" x="20" y="245" width="374" height="40"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -136,7 +148,8 @@
                             <constraint firstItem="0ln-sz-CvS" firstAttribute="leading" secondItem="N4K-EE-3wX" secondAttribute="leading" id="Elk-6e-TF3"/>
                             <constraint firstItem="AYd-5E-oec" firstAttribute="top" secondItem="X96-mB-rmF" secondAttribute="bottom" constant="59" id="GzW-ri-QJK"/>
                             <constraint firstItem="Jzf-7c-cg5" firstAttribute="top" secondItem="N4K-EE-3wX" secondAttribute="bottom" constant="45" id="HJM-Qk-ymF"/>
-                            <constraint firstItem="8gN-UB-pVT" firstAttribute="top" secondItem="0ln-sz-CvS" secondAttribute="bottom" constant="22" id="Ijo-1B-O8d"/>
+                            <constraint firstItem="8gN-UB-pVT" firstAttribute="top" secondItem="0ln-sz-CvS" secondAttribute="bottom" constant="38" id="Ijo-1B-O8d"/>
+                            <constraint firstItem="Vnz-Jx-kqd" firstAttribute="trailing" secondItem="98y-6h-E6O" secondAttribute="trailing" id="JkL-Ix-uSG"/>
                             <constraint firstItem="1DD-OS-RdG" firstAttribute="leading" secondItem="AYd-5E-oec" secondAttribute="leading" id="O9l-IW-FiE"/>
                             <constraint firstItem="98y-6h-E6O" firstAttribute="trailing" secondItem="AYd-5E-oec" secondAttribute="trailing" constant="198" id="Pct-q4-PZg"/>
                             <constraint firstItem="0ln-sz-CvS" firstAttribute="trailing" secondItem="N4K-EE-3wX" secondAttribute="trailing" id="QP2-qK-AnA"/>
@@ -144,13 +157,16 @@
                             <constraint firstItem="98y-6h-E6O" firstAttribute="bottom" secondItem="1gI-kB-WWh" secondAttribute="bottom" constant="33" id="SbE-m9-Zz5"/>
                             <constraint firstItem="Jzf-7c-cg5" firstAttribute="trailing" secondItem="1gI-kB-WWh" secondAttribute="trailing" id="SnT-vU-sfw"/>
                             <constraint firstItem="X96-mB-rmF" firstAttribute="top" secondItem="98y-6h-E6O" secondAttribute="top" id="Tvi-1r-4LB"/>
+                            <constraint firstItem="0ln-sz-CvS" firstAttribute="top" secondItem="BFC-wL-Lm1" secondAttribute="bottom" constant="10" id="UAz-At-7cm"/>
                             <constraint firstItem="N4K-EE-3wX" firstAttribute="top" secondItem="0ln-sz-CvS" secondAttribute="bottom" constant="8" id="Xbc-fM-9Fr"/>
                             <constraint firstItem="AYd-5E-oec" firstAttribute="leading" secondItem="0ln-sz-CvS" secondAttribute="leading" id="eAs-yS-TUt"/>
                             <constraint firstItem="Jzf-7c-cg5" firstAttribute="leading" secondItem="1gI-kB-WWh" secondAttribute="leading" id="eaN-rd-Ilq"/>
                             <constraint firstItem="8gN-UB-pVT" firstAttribute="trailing" secondItem="Jzf-7c-cg5" secondAttribute="trailing" id="fOV-fn-G9z"/>
-                            <constraint firstItem="1DD-OS-RdG" firstAttribute="top" secondItem="X96-mB-rmF" secondAttribute="bottom" constant="25" id="hIW-NK-vWd"/>
+                            <constraint firstItem="Vnz-Jx-kqd" firstAttribute="top" secondItem="98y-6h-E6O" secondAttribute="top" id="gJP-dP-TJJ"/>
+                            <constraint firstItem="98y-6h-E6O" firstAttribute="trailing" secondItem="BFC-wL-Lm1" secondAttribute="trailing" constant="24" id="gaU-XQ-zwn"/>
+                            <constraint firstItem="1DD-OS-RdG" firstAttribute="top" secondItem="X96-mB-rmF" secondAttribute="bottom" constant="11" id="hIW-NK-vWd"/>
                             <constraint firstItem="N4K-EE-3wX" firstAttribute="trailing" secondItem="8gN-UB-pVT" secondAttribute="trailing" id="nWM-fp-ngT"/>
-                            <constraint firstItem="0ln-sz-CvS" firstAttribute="top" secondItem="1DD-OS-RdG" secondAttribute="bottom" constant="31" id="nts-iG-EWg"/>
+                            <constraint firstItem="0ln-sz-CvS" firstAttribute="top" relation="lessThanOrEqual" secondItem="1DD-OS-RdG" secondAttribute="bottom" constant="45" id="nts-iG-EWg"/>
                             <constraint firstItem="0ln-sz-CvS" firstAttribute="top" secondItem="AYd-5E-oec" secondAttribute="bottom" constant="8" id="oJN-FJ-OqB"/>
                             <constraint firstItem="1DD-OS-RdG" firstAttribute="trailing" secondItem="0ln-sz-CvS" secondAttribute="trailing" id="opR-kO-izo"/>
                             <constraint firstItem="X96-mB-rmF" firstAttribute="leading" secondItem="98y-6h-E6O" secondAttribute="leading" id="qwg-He-XLP"/>
@@ -164,6 +180,7 @@
                     <connections>
                         <outlet property="detailImageView" destination="X96-mB-rmF" id="dBd-jr-NeT"/>
                         <outlet property="genreLabel" destination="0ln-sz-CvS" id="0z6-DT-pcy"/>
+                        <outlet property="movieFavButton" destination="BFC-wL-Lm1" id="W95-i2-Qza"/>
                         <outlet property="nameLabel" destination="1DD-OS-RdG" id="OMZ-UQ-Hkj"/>
                         <outlet property="overviewLabel" destination="Jzf-7c-cg5" id="oUe-HL-OSs"/>
                         <outlet property="releaseDateLabel" destination="N4K-EE-3wX" id="Uly-sN-W54"/>
@@ -177,6 +194,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="closeButton" width="50" height="50"/>
         <image name="film.fill" catalog="system" width="128" height="93"/>
     </resources>
 </document>
